<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:background="#330066"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="5dp"
                    android:text="@string/to_do_lists"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/new_task_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#330066"
                    android:foreground="@drawable/white_stroke_rectangle"
                    android:text="@string/plus_new"
                    android:textColor="@color/grey" />

                <Button
                    android:id="@+id/tutorial_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="#330066"
                    android:foreground="@drawable/white_stroke_rectangle"
                    android:text="@string/tutorial"
                    android:textColor="@color/grey" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:background="@color/white" />

            <ListView
                android:id="@+id/tags_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/white_corner_box">

            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="clip_horizontal|center"
                    android:padding="5dp"
                    android:text="@string/completed_tasks"
                    android:textColor="#330066"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/clear_tasks_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:foreground="@drawable/purple_stroke_rectangle"
                    android:text="@string/clear"
                    android:textColor="#330066" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:background="#330066" />

            <ListView

                android:id="@+id/completed_tasks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/grey_corner_box" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>