<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#330066"
    android:fitsSystemWindows="true"
    android:padding="10dp"
    tools:context=".NewTaskActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/white_corner_box"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/new_task"
                android:textColor="#330066"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:foreground="@drawable/purple_stroke_rectangle"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/task"
                        android:imeOptions="actionNext"
                        android:inputType="textShortMessage"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingHorizontal="3dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:hint="@string/tag"
                            android:imeOptions="actionNext"
                            android:inputType="textShortMessage"
                            android:textColor="@color/black" />

                        <Spinner
                            android:id="@+id/tag_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingHorizontal="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/due_date" />

                        <Button
                            android:id="@+id/due_date"
                            style="?android:spinnerStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:onClick="openDatePicker"
                            android:textColor="@color/black" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <![CDATA[



        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        ]]>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:background="@color/white" />

            <Button
                android:id="@+id/create_task_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:foreground="@drawable/purple_stroke_rectangle"
                android:text="@string/create"
                android:textColor="#330066" />
        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>